cmake_minimum_required(VERSION 3.26)
project(ASSIGNMENTS C)

set(CMAKE_C_STANDARD 23)

add_executable(ASSIGNMENTS
       # "palindrome triangle.c"
        #  "pattern 1.c"
        "alpha_triangle.c"
        #  "pattern 2.c"
      #  china_town.c
       # esc_seq.c
       # swap.c
       # prime.c
       # "fibonacci 1.c"

)
