cmake_minimum_required(VERSION 3.26)
project(ASSIGNMENTS C)

set(CMAKE_C_STANDARD 23)

add_executable(ASSIGNMENTS
      #  alpha_triangle.c
       # infinite.c
        # hourglass_star.c
        #pattern_sq_star.c
        diamond.c
        #palindrome.c
        # list_demo.c
        #  china_town.c
       # esc_seq.c
       # swap.c
       # prime.c

)
